--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Big Jo's</title>
         <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" href="/images/Logo.jpg">
+        <link rel="icon" type="image/x-icon" href="Logo.jpg">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
