--- a/burgers.html
+++ b/burgers.html
@@ -11,12 +11,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="container">
         
         <!--Header-->
         <div>
                 <a href="index.html"></a>
-                <img src="Logo.png" id="logo-img">
+                <img src="Logo.png" class="item-logo-img">
         </div>
         
         <!--Order Now-->
@@ -38,7 +37,7 @@
         <section class="item-section"> 
 
             <div class="item-div">
-                <img src="Rergular-burger.jpg" class="item-img">
+                <img src="Regular-burger.jpg" class="item-img">
                 <h5 class="item-name">Regular Burger</h5>
                 <p class="item-price">R22,99</p>
                 <button class="add-item-btn">ADD TO CART</button>
