added a few forms information

--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
         <h1 style="color: white; padding: .2em 0; text-align: center; font-size: 2.5em;">Our Customer Care</h1>
     </section>
 
-    <img src="/images/Logo.png" class="contact-logo">
+    <img src="Logo.png" class="contact-logo">
 
     <section class="customer-care-section-img">
-        <img src="/images/drinksss.jpg" class="customer-care-img customer-burger">
-        <img src="/images/burger-menu.jpg" class="customer-care-img">
-        <img src="/images/shwarma-menu.jpg" class="customer-care-img">
-        <img src="/images/chicken-menu.jpg" class="customer-care-img customer-chicken">
+        <img src="drinksss.jpg" class="customer-care-img customer-burger">
+        <img src="burger-menu.jpg" class="customer-care-img">
+        <img src="shwarma-menu.jpg" class="customer-care-img">
+        <img src="chicken-menu.jpg" class="customer-care-img customer-chicken">
     </section> 
     
     <section>
