added privacy policy

--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -9,85 +9,106 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="ts-and-cs-body"> 
+<body class="privacy-policy-body"> 
 
     <a href="index.html">
-    <img src="/images/Logo.png" class="terms-logo">
+    <img src="Logo.png" class="privacy-logo">
     </a>
 
-    <h1 class="terms-header">Privacy Policy</h1>
+    <h1 class="privacy-header">Privacy Policy</h1>
 
-<div class="terms-container">
-    <div class="terms-subhead">
+<div class="privacy-container">
+    <div class="privacy-subhead">
         <h1>Payment & Transaction Information</h1>
-    <p class="terms-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus necessitatibus ut debitis expedita culpa,
-         dicta dignissimos dolor corporis corrupti aliquid autem iure. Autem reiciendis quae dignissimos molestias impedit
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.</p>
+    <p class="privacy-paragraph"> We may collect information such as items purchased, date and time of your transaction, amount purchased, whether you used a 
+        particular coupon or deal, and payment information, such as your credit/debit card or gift card or loyalty program details, when you make an in-store 
+        or online purchase. We use this information to fulfill your order and complete your transaction, update your rewards, detect and prevent fraud, and 
+        to inform our advertising and marketing.</p>
     </div>
 
-    <div class="terms-subhead">
+    <div class="privacy-subhead">
         <h1>Comments, Chats & Opinions</h1>
-    <p class="terms-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus necessitatibus ut debitis expedita culpa,
-         dicta dignissimos dolor corporis corrupti aliquid autem iure. Autem reiciendis quae dignissimos molestias impedit
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.</p>
+    <p class="privacy-paragraph">When you contact us directly (e.g., by email, phone, mail or by completing an online form or participating in online chat),
+         we may record your comments and opinions. We may also record comments and opinions you express when responding to surveys, entering a contest or sweepstakes
+          or taking part in a promotion. We use this information to respond to your question or comment, to evaluate and improve our products and services and to inform 
+          our marketing and advertising activities. When you contact us directly to submit a concern, complaint or question, we may record your comments and collect 
+          the personal information contained in your communications (e.g., contact information, health or medical information, photos, etc.). We use this information 
+          to respond to your questions or concerns, and to evaluate and improve our products and services.</p>
     </div>
 
-    <div class="terms-subhead">
+    <div class="privacy-subhead">
         <h1>Instore data we collect</h1>
-    <p class="terms-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus necessitatibus ut debitis expedita culpa,
-         dicta dignissimos dolor corporis corrupti aliquid autem iure. Autem reiciendis quae dignissimos molestias impedit
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.</p>
+
+    <p class="privacy-paragraph"><strong>In-store video or images.</strong>
+    In some locations, we use CCTV cameras in our stores for security, fraud, incident reporting and loss-prevention purposes, or to collect analytics,
+    improve operations and other purposes.
+    </p>
+    
+    <p class="privacy-paragraph"><strong>Transaction information.</strong>
+    We may collect information about your in-store transaction such as items purchased, date and time of your transaction, amount purchased, and payment information,
+     such as your credit/debit card or gift card details, when you make an in-store purchase.
+    </p>
+
+    <p class="privacy-paragraph"><strong>In-store Wi-Fi.</strong>
+    In some locations, we may offer free Wi-Fi services to our guests. Our Wi-Fi network providers may capture certain data from devices you connect to it,
+    such as a unique device identifier. We may also enable Bluetooth or other technologies in our stores which enable us to detect the presence of your device in
+    our stores or provide operational insights.
+    </p>
+
     </div>
 
-    <div>
+    <div class="privacy-subhead">
         <h1>Information we collect when you use our site</h1>
-    <p class="terms-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus necessitatibus ut debitis expedita culpa,
-         dicta dignissimos dolor corporis corrupti aliquid autem iure. Autem reiciendis quae dignissimos molestias impedit
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.
-    Incidunt dolor similique aliquam voluptates cumque iusto at. Laudantium a consequatur at velit cum, dolor impedit 
-    necessitatibus ducimus sit, ex ratione aperiam ullam, omnis nihil ipsam reprehenderit. Sint, suscipit obcaecati?
-    Molestiae, eligendi totam. Consectetur sed fuga quos nihil obcaecati perspiciatis dignissimos deleniti impedit distinctio 
-    repellat molestias, libero dolores eos quisquam commodi possimus itaque nemo maxime dolore minus veniam? Et, nemo.</p>
+    <p class="privacy-paragraph"><strong>Location information.</strong>
+    We may collect information about your location if you provide your address or postal/zip code or we may approximate your location based on your IP address.
+    If you provide our mobile applications access to location services on your device, we and our third party providers may collect location data through GPS, Wi-Fi,
+    wireless network triangulation or other similar methods. We may use your location information to provide personalized content and advertising, to enhance 
+    your shopping and dining experience, to allow you to view deals and products available to you based on your location, to assist us with analytics such as 
+    foot traffic measurement, and to improve the effectiveness of our websites, restaurants, mobile applications, merchandise, advertising, and customer service.
+    We may also use your location information to provide you with more information regarding events, personalized offers regarding products, services, or 
+    other opportunities, and notifications via social media which may interest you. We may also use the Google Maps Application Programming Interface to 
+    gather information about your location. Google uses various technologies to determine your location, including your IP address, GPS, and other sensors that may,
+    for example, provide Google with information on nearby devices.
+    </p>
+    
+    <p class="privacy-paragraph"><strong>Information you may post or submit to our Sites.</strong>
+    We may collect information about how you use and interact with our Sites and our Service, including any content you post to the Service.
+    If you share photos and video from a mobile device, we will access your device camera roll and camera with your permission as needed to post your content.
+    If you need to update your permissions, you can do so in the “Settings” app of your device.
+    </p>
+
+    </div>
+
+    <div class="privacy-subhead">
+        <h1>How do we use personal information</h1>
+
+    <p class="privacy-paragraph"><strong>To fulfill your requests and provide our Services to you.</strong>
+    For example, we or our franchisees may use your information to complete your order or other online and in-store transactions, deliver orders you place online,
+    or respond to your customer service requests or feedback. We may also use your information to personalize your experience with us and facilitate our rewards or
+    loyalty programs. We also use this information to provide the Service to you across our operations, including by supporting your in-store experience when you
+    engage with our franchisee-owned locations.
+    </p>
+
+    <p class="privacy-paragraph"><strong>To communicate with you.</strong>
+    For example, we may communicate with you about your account activities, such as by providing you transaction confirmations, alerting you when a gift card you
+    sent has been received by the recipient, or updating you about employment opportunities for which you've applied. If you register with us, we may enroll you in
+    our email newsletter or other periodic electronic communications and may also send you user surveys and promotional communications. We may communicate
+    with you by email, postal mail, telephone, text message, or other means. We may use push notifications on our mobile apps to your mobile device. 
+    For more information on how to adjust your communications preferences, see “Your Choices and Control Over Your Information” below.
+    </p>
+
+    <p class="privacy-paragraph"><strong>To monitor, improve and develop our products and services.</strong>
+    We may use your information to understand our visitors and customers and tailor our product offerings accordingly. From time to time, we analyze statistics
+    and trends to make our Sites and Services better and to develop new services or features.
+    </p>
+
+    <p class="privacy-paragraph"><strong>For marketing purposes.</strong>
+    We may send you communications about new features, updates, products and special offers. We may also use your information to serve you ads about products
+    and special offers about our products or other products or services we think you might find interesting. We may also use individual and aggregate information
+    about you to inform our marketing and advertising campaigns. For more information on your choices about marketing communications, see “Your Choices and
+    Control Over Your Information” below and our Cookie and Ads Policy, available on our Site.
+    </p>
+
     </div>
 
 </div>
