--- a/burgers.html
+++ b/burgers.html
@@ -7,7 +7,7 @@
         <title>Burgers Section</title>
         
         <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" href="Logo.jpg">
+        <link rel="icon" type="image/x-icon" href="Logo.png">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
