--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
     <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="Logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
