changed the links in the nav section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#home" id="home">Home</a></li>
                     <li id="menu-option"><a href="#show-menu">Menu</a></li>
                     <li><a href="#">Stores</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
         </div>   
 
