--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
                 <ul class="home-nav">
-                    <li><a href="#home" id="home">Home</a></li>
+                    <li><a href="index.html" id="home">Home</a></li>
                     <li id="menu-option"><a href="#show-menu">Menu</a></li>
                     <li><a href="#">Stores</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -32,7 +32,11 @@
             <a class="order-btn" href="#menu">Order Now</a>
             
             <div class="cart-container">
-                <div class="cart"><i class="fa-solid fa-cart-shopping cart-icon"></i></div>
+                <div class="cart">
+                    <a href="cart.html">
+                    <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                    </a>
+                </div>
                 <div class="cartValue" id="cartValue">0</div>
             </div>
 
@@ -125,6 +129,7 @@
 
     </div>
 
+    <script src="data.js"></script>
     <script src="script.js"></script>
     
     </body>
