added some cart content

--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
 
       <ul class="home-nav">
         <li><a href="index.html" id="home">Home</a></li>
-        <li id="menu-option"><a href="#show-menu">Menu</a></li>
+        <li id="menu-option"><a href="index.html#show-menu">Menu</a></li>
         <li><a href="#">Stores</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
