--- a/chicken.html
+++ b/chicken.html
@@ -102,7 +102,7 @@
         <section class="policy-section">
             
            <p><a href="Terms.html">Terms & Conditions</a></p>
-           <p><a>Privacy Policy</a></p>
+           <p><a href="privacyPolicy.html">Privacy Policy</a></p>
            <p><a href="contact.html">Contact Us</a></p>  
         </section>
 
