--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
                     </a>
                 </div>
-                <div class="cartValue" id="cartValue">0</div>
+                <div class="cartValue">0</div>
             </div>
 
         </section>
+        
 
         <!--Ads Section-->
 
