--- a/burgers.html
+++ b/burgers.html
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
                     </a>
                 </div>
-                <div class="cartValue">0</div>
+                <div class="cartValue" id="cartValue">0</div>
             </div>
         </section>
 
@@ -129,7 +129,7 @@
             </div>
             <div class="credit">Copyright @2022 by <span>&nbsp Sandile Ndimande</span></div>
         </footer>
-        
+
         <script src="script.js"></script>
         <script src="cart.js"></script>
     </div>
