--- a/index.html
+++ b/index.html
@@ -48,18 +48,24 @@
         <div class="slideshow-container">
 
             <div class="animatedAds fade">
-                <img src="friedChips-menu.jpg" class="imgAd"></img>
-                <div class="caption">Our Crispy Chips</div>
+                <a href="chips.html">
+                    <img src="friedChips-menu.jpg" class="imgAd"></img>
+                    <div class="caption">Our Crispy Chips</div>
+                </a>
             </div>
 
             <div class="animatedAds fade">
-                <img src="burger-menu.jpg" class="imgAd"></img>
-                <div class="caption">Our A Grade Burgers</div>
+                <a href="burgers.html">
+                    <img src="burger-menu.jpg" class="imgAd"></img>
+                    <div class="caption">Our A Grade Burgers</div>
+                </a>
             </div>
 
             <div class="animatedAds fade">
-                <img src="hake-menu.jpg" class="imgAd"></img>
-                <div class="caption">Our Scrumptious Hake</div>
+                <a href="hake.html">
+                    <img src="hake-menu.jpg" class="imgAd"></img>
+                    <div class="caption">Our Scrumptious Hake</div>
+                </a>
             </div>
 
             <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -68,7 +74,7 @@
         </div>
         <br>
 
-        <div style="text-align:center">
+        <div class="dots">
             <span class="dot" onclick="currentSlide(1)"></span> 
             <span class="dot" onclick="currentSlide(2)"></span> 
             <span class="dot" onclick="currentSlide(3)"></span> 
@@ -157,8 +163,8 @@
 
     </div>
 
-    <script defer src="data.js"></script>
-    <script defer src="script.js"></script>
+    <script src="data.js"></script>
+    <script src="script.js"></script>
     
     </body>
     </html>
