--- a/cart.html
+++ b/cart.html
@@ -17,14 +17,14 @@
     <div class="header-div">
       <div class="header-logo" id="header-logo">
         <a href="#home"></a>
-        <img src="Logo.png" class="logo-img" />
+        <img src="/headers/Logo.png" class="logo-img" />
       </div>
 
       <ul class="home-nav">
         <li><a href="index.html" id="home">Home</a></li>
         <li id="menu-option"><a href="index.html#show-menu">Menu</a></li>
         <li><a href="#">Stores</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/Ts_and_cs/contact.html">Contact</a></li>
       </ul>
     </div>
 
@@ -45,7 +45,6 @@
     <div class="shopping-cart" id="shopping-cart"></div>
   </body>
 
-  <script src="data.js"></script>
-  <script src="burgers.js"></script>
-  <script src="cart.js"></script>
+  <script src="/Js/data.js"></script>
+  <script src="/Js/cart.js"></script>
 </html>
