--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Big Jo's</title>
         <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" href="Logo.png">
+        <link rel="icon" type="image/x-icon" href="./headers/Logo.png">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -47,14 +47,14 @@
         <div class="slideshow-container">
 
             <div class="animatedAds fade">
-                <a href="chips.html">
+                <a href="./Chips/chips.html">
                     <img src="./Chips/friedChips-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Crispy Chips</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="burgers.html">
+                <a href="./Burgers/burgers.html">
                     <img src="./Burgers/burger-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our A Grade Burgers</div>
                 </a>
