added file paths

--- a/Ts_and_cs/contact.html
+++ b/Ts_and_cs/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Care Services</title>
     <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="Logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="../headrs/Logo.png">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="customer-care-body">
@@ -17,11 +17,11 @@
         <h1 class="customer-care-header">Our Customer Care</h1>
     </section>
 
-    <img src="Logo.png" class="contact-logo">
+    <img src="../headers/Logo.png" class="contact-logo">
 
     <section class="customer-care-section-img">
-        <img src="drinksss.jpg" class="customer-care-img">
-    </section> 
+        <img src="../Drinks/drinksss.jpg" class="customer-care-img">
+    </section>
     
     <section>
         <div class="contact-subhead">      
@@ -75,7 +75,8 @@
         <div class="credit">Copyright @2022 by <span>&nbsp Sandile Ndimande</span></div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../Js/cart.js"></script>
+    <script src="../Js/script.js"></script>
 </div>
 </body>
 </html>
