--- a/Ts_and_cs/privacyPolicy.html
+++ b/Ts_and_cs/privacyPolicy.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
     <script src="https://kit.fontawesome.com/9c2c64b826.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="Logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="../headers/Logo.png">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="privacy-policy-body"> 
 
     <a href="index.html">
-    <img src="Logo.png" class="privacy-logo">
+    <img src="../headers/Logo.png" class="privacy-logo">
     </a>
 
     <h1 class="privacy-header">Privacy Policy</h1>
@@ -118,7 +118,9 @@
     <div class="credit">Copyright @2022 by <span>&nbsp Sandile Ndimande</span></div>
 </footer>
 
-<script src="script.js"></script>
+    <script src="../Js/cart.js"></script>
+    <script src="../Js/script.js"></script>
+
 </div>
 </body>
 </html>
