--- a/cart.html
+++ b/cart.html
@@ -9,22 +9,22 @@
       src="https://kit.fontawesome.com/9c2c64b826.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-icon" href="Logo.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="../headers/Logo.png" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
     <div class="header-div">
       <div class="header-logo" id="header-logo">
         <a href="#home"></a>
-        <img src="/headers/Logo.png" class="logo-img" />
+        <img src="../headers/Logo.png" class="logo-img" />
       </div>
 
       <ul class="home-nav">
-        <li><a href="index.html" id="home">Home</a></li>
-        <li id="menu-option"><a href="index.html#show-menu">Menu</a></li>
+        <li><a href="../index.html" id="home">Home</a></li>
+        <li id="menu-option"><a href="../index.html#show-menu">Menu</a></li>
         <li><a href="#">Stores</a></li>
-        <li><a href="/Ts_and_cs/contact.html">Contact</a></li>
+        <li><a href="../Ts_and_cs/contact.html">Contact</a></li>
       </ul>
     </div>
 
@@ -45,6 +45,6 @@
     <div class="shopping-cart" id="shopping-cart"></div>
   </body>
 
-  <script src="/Js/data.js"></script>
-  <script src="/Js/cart.js"></script>
+  <script src="../Js/data.js"></script>
+  <script src="../Js/cart.js"></script>
 </html>
