--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 
     </div>
 
+    <script src="./Js/cart.js"></script>
     <script src="./Js/data.js"></script>
     <script src="./Js/script.js"></script>
     
