--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         <div class="slideshow-container">
 
             <div class="animatedAds fade">
-                <a href="../Chips/chips.html">
-                    <img src="../Chips/friedChips-menu.jpg" class="imgAd"></img>
+                <a href="Chips/chips.html">
+                    <img src="Chips/friedChips-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Crispy Chips</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="/Burgers/burgers.html">
-                    <img src="/Burgers/burger-menu.jpg" class="imgAd"></img>
+                <a href="Burgers/burgers.html">
+                    <img src="Burgers/burger-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our A Grade Burgers</div>
                 </a>
             </div>
