--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 
             <div class="animatedAds fade">
                 <a href="Chips/chips.html">
-                    <img src="Chips/friedChips-menu.jpg" class="imgAd"></img>
+                    <img src="./Chips/friedChips-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Crispy Chips</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
                 <a href="Burgers/burgers.html">
-                    <img src="Burgers/burger-menu.jpg" class="imgAd"></img>
+                    <img src="./Burgers/burger-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our A Grade Burgers</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
                 <a href="Hake/hake.html">
-                    <img src="Hake/hake-menu.jpg" class="imgAd"></img>
+                    <img src="./Hake/hake-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Scrumptious Hake</div>
                 </a>
             </div>
