added file paths

--- a/Burgers/burgers.html
+++ b/Burgers/burgers.html
@@ -21,11 +21,11 @@
         <!--Order Now-->
 
         <section class="order-section">
-            <a class="order-btn" href="#menu">Order Now</a>
+            <a class="order-btn" href="../#menu">Order Now</a>
             
             <div class="cart-container">
                 <div class="cart">
-                    <a href="../Js/cart.html">
+                    <a href="../cart.html">
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
                     </a>
                 </div>
@@ -130,8 +130,8 @@
             <div class="credit">Copyright @2022 by <span>&nbsp Sandile Ndimande</span></div>
         </footer>
 
-        <script src="../Js/script.js"></script>
         <script src="../Js/cart.js"></script>
+        
     </div>
     </body>
     </html>
