--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
         <div class="slideshow-container">
 
             <div class="animatedAds fade">
-                <a href="Chips/chips.html">
+                <a href="./Chips/chips.html">
                     <img src="./Chips/friedChips-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Crispy Chips</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="Burgers/burgers.html">
+                <a href="./Burgers/burgers.html">
                     <img src="./Burgers/burger-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our A Grade Burgers</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="Hake/hake.html">
+                <a href="./Hake/hake.html">
                     <img src="./Hake/hake-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Scrumptious Hake</div>
                 </a>
@@ -162,9 +162,9 @@
 
     </div>
 
+    <script src="./Js/script.js"></script>
     <script src="./Js/cart.js"></script>
     <script src="./Js/data.js"></script>
-    <script src="./Js/script.js"></script>
     
     </body>
     </html>
