--- a/Drinks/drinks.html
+++ b/Drinks/drinks.html
@@ -14,17 +14,21 @@
 
         <!--Header-->
         <div>
-            <a href="index.html"></a>
+            <a href="../index.html"></a>
             <img src="../headers/Logo.png" class="item-logo-img">
         </div>
         
         <!--Order Section-->
 
         <section class="order-section">
-            <a class="order-btn" href="#menu">Order Now</a>
+            <a class="order-btn" href="../#menu">Order Now</a>
             
             <div class="cart-container">
-                <div class="cart"><i class="fa-solid fa-cart-shopping cart-icon"></i></div>
+                <div class="cart">
+                    <a href="../cart.html">
+                    <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                    </a>
+                </div>
                 <div class="cartValue" id="cartValue">0</div>
             </div>
 
