--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" type="image/x-icon" href="../headers/Logo.png" />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
