--- a/cart.html
+++ b/cart.html
@@ -2,22 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
     <script
       src="https://kit.fontawesome.com/9c2c64b826.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" type="image/x-icon" href="../headers/Logo.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="../headers/Logo.png">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <div class="header-div">
       <div class="header-logo" id="header-logo">
         <a href="#home"></a>
-        <img src="../headers/Logo.png" class="logo-img" />
+        <img src="../headers/Logo.png" class="logo-img">
       </div>
 
       <ul class="home-nav">
