--- a/Hake/hake.html
+++ b/Hake/hake.html
@@ -14,14 +14,15 @@
 
         <!--Header Section-->
         <div>
-            <a href="index.html"></a>
+            <a href="index.html">
             <img src="../headers/Logo.png" class="item-logo-img">
+            </a>
         </div>
 
         <!--Order Section-->
 
         <section class="order-section">
-            <a class="order-btn" href="#menu">Order Now</a>
+            <a class="order-btn" href="../#menu">Order Now</a>
             
             <div class="cart-container">
                 <div class="cart"><i class="fa-solid fa-cart-shopping cart-icon"></i></div>
@@ -93,8 +94,6 @@
             </div>
 
         </section>
-
-        <p class="to-top"><a href="#home-section">Back To Top</a></p>
 
         <section class="policy-section">
             
