--- a/Ts_and_cs/Terms.html
+++ b/Ts_and_cs/Terms.html
@@ -16,7 +16,13 @@
     <img src="../headers/Logo.png" class="privacy-logo">
     </a>
 
-    <h1 class="privacy-header">Terms & Conditions</h1>
+    <h1 class="privacy-header">Terms & Conditions
+
+        <a href="../index.html">
+            <i class="fa-sharp fa-solid fa-right-from-bracket"></i>
+        </a>
+        
+    </h1>
 
     <img src="banner.png" alt="" class="terms-banner">
 
