--- a/Ts_and_cs/contact.html
+++ b/Ts_and_cs/contact.html
@@ -17,10 +17,12 @@
         <h1 class="customer-care-header">Our Customer Care</h1>
     </section>
 
-    <img src="../headers/Logo.png" class="contact-logo">
-
+    <a href="../index.html">
+      <img src="../headers/Logo.png" class="contact-logo">
+    </a>
+    
     <section class="customer-care-section-img">
-        <img src="../Drinks/drinksss.jpg" class="customer-care-img">
+        <img src="../Drinks/drinks.jpg" class="customer-care-img">
     </section>
     
     <section>
