--- a/Ts_and_cs/privacyPolicy.html
+++ b/Ts_and_cs/privacyPolicy.html
@@ -12,12 +12,17 @@
 
 <body class="privacy-policy-body"> 
 
-    <a href="index.html">
     <img src="../headers/Logo.png" class="privacy-logo">
-    </a>
 
-    <h1 class="privacy-header">Privacy Policy</h1>
 
+        <h1 class="privacy-header">Privacy Policy
+
+            <a href="../index.html">
+                <i class="fa-sharp fa-solid fa-right-from-bracket"></i>
+            </a>
+
+        </h1>
+    
 <div class="privacy-container">
     <div class="privacy-subhead">
         <h1>Payment & Transaction Information</h1>
