--- a/Ts_and_cs/privacyPolicy.html
+++ b/Ts_and_cs/privacyPolicy.html
@@ -123,8 +123,8 @@
     <div class="credit">Copyright @2022 by <span>&nbsp Sandile Ndimande</span></div>
 </footer>
 
-    <script src="../Js/cart.js"></script>
-    <script src="../Js/script.js"></script>
+    <script src="/cart.js"></script>
+    <script src="/script.js"></script>
 
 </div>
 </body>
