--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 
     </div>
 
-    <script src="./Js/script.js"></script>
-    <script src="./Js/cart.js"></script>
+    <script src="script.js"></script>
+    <script src="cart.js"></script>
     
     </body>
     </html>
