--- a/cart.html
+++ b/cart.html
@@ -15,9 +15,11 @@
 
   <body>
     <div class="header-div">
+
       <div class="header-logo" id="header-logo">
-        <a href="#home"></a>
-        <img src="headers/Logo.png" class="logo-img">
+        <a href="index.html#home">
+        <img src="./headers/Logo.png" class="logo-img">
+        </a>
       </div>
 
       <ul class="home-nav">
