--- a/index.html
+++ b/index.html
@@ -96,32 +96,32 @@
 
             <div class="menu-item">
                 <img src="./Burgers/burger-menu.jpg" class="menu-img">
-                <a href="./Burgers/burgers.html" class="menu-button">Burgers</a>
+                <a href="./Burgers/burgers" class="menu-button">Burgers</a>
             </div>
 
             <div class="menu-item">
                 <img src="./Shwarma/shwarma-menu.jpg" class="menu-img">
-                <a href="./Shwarma/shwarma.html" class="menu-button">Shwarma</a>
+                <a href="./Shwarma/shwarma" class="menu-button">Shwarma</a>
             </div>
 
             <div class="menu-item">
                 <img src="./Chicken/chicken-menu.jpg" class="menu-img">
-                <a href="./Chicken/chicken.html" class="menu-button">Chicken</a>
+                <a href="./Chicken/chicken" class="menu-button">Chicken</a>
             </div>
 
             <div class="menu-item">
                 <img src="./Chips/friedChips-menu.jpg" class="menu-img">
-                <a href="./Chips/chips.html" class="menu-button">Chips</a>
+                <a href="./Chips/chips" class="menu-button">Chips</a>
             </div>
 
             <div class="menu-item">
                 <img src="./Drinks/drinks-menu.jpg" class="menu-img">
-                <a href="./Drinks/drinks.html" class="menu-button">Drinks</a>
+                <a href="./Drinks/drinks" class="menu-button">Drinks</a>
             </div>
 
             <div class="menu-item">
                 <img src="./Hake/hake-menu.jpg" class="menu-img">
-                <a href="./Hake/hake.html" class="menu-button">Hake</a>
+                <a href="./Hake/hake" class="menu-button">Hake</a>
             </div>
         </section>
 
