--- a/Hake/hake.html
+++ b/Hake/hake.html
@@ -14,7 +14,7 @@
 
         <!--Header Section-->
         <div>
-            <a href="index.html">
+            <a href="index">
             <img src="../headers/Logo.png" class="item-logo-img">
             </a>
         </div>
@@ -97,9 +97,9 @@
 
         <section class="policy-section">
             
-           <p><a href="../Ts_and_cs/Terms.html">Terms & Conditions</a></p>
-           <p><a href="../Ts_and_cs/privacyPolicy.html">Privacy Policy</a></p>
-           <p><a href="../Ts_and_cs/contact.html">Contact Us</a></p>  
+           <p><a href="../Ts_and_cs/Terms">Terms & Conditions</a></p>
+           <p><a href="../Ts_and_cs/privacyPolicy">Privacy Policy</a></p>
+           <p><a href="../Ts_and_cs/contact">Contact Us</a></p>  
         </section>
 
         <footer> 
