--- a/Ts_and_cs/Terms.html
+++ b/Ts_and_cs/Terms.html
@@ -18,7 +18,7 @@
 
     <h1 class="privacy-header">Terms & Conditions
 
-        <a href="../index.html">
+        <a href="../index">
             <i class="fa-sharp fa-solid fa-right-from-bracket"></i>
         </a>
         
