--- a/Ts_and_cs/privacyPolicy.html
+++ b/Ts_and_cs/privacyPolicy.html
@@ -17,7 +17,7 @@
 
         <h1 class="privacy-header">Privacy Policy
 
-            <a href="../index.html">
+            <a href="../index">
                 <i class="fa-sharp fa-solid fa-right-from-bracket"></i>
             </a>
 
