--- a/cart.html
+++ b/cart.html
@@ -17,16 +17,16 @@
     <div class="header-div">
 
       <div class="header-logo" id="header-logo">
-        <a href="index.html#home">
+        <a href="index">
         <img src="./headers/Logo.png" class="logo-img">
         </a>
       </div>
 
       <ul class="home-nav">
-        <li><a href="index.html" id="home">Home</a></li>
-        <li id="menu-option"><a href="index.html#show-menu">Menu</a></li>
+        <li><a href="index" id="home">Home</a></li>
+        <li id="menu-option"><a href="index#show-menu">Menu</a></li>
         <li><a href="#">Stores</a></li>
-        <li><a href="Ts_and_cs/contact.html">Contact</a></li>
+        <li><a href="Ts_and_cs/contact">Contact</a></li>
       </ul>
     </div>
 
