--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </div>
 
                 <ul class="home-nav">
-                    <li><a href="index.html" id="home">Home</a></li>
+                    <li><a href="index" id="home">Home</a></li>
                     <li id="menu-option"><a href="#show-menu">Menu</a></li>
                     <li><a href="#">Stores</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
         </div>   
 
@@ -33,7 +33,7 @@
             
             <div class="cart-container">
                 <div class="cart">
-                    <a href="cart.html">
+                    <a href="cart">
                     <i class="fa-solid fa-cart-shopping cart-icon"></i>
                     </a>
                 </div>
@@ -47,21 +47,21 @@
         <div class="slideshow-container">
 
             <div class="animatedAds fade">
-                <a href="./Chips/chips.html">
+                <a href="./Chips/chips">
                     <img src="./Chips/friedChips-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Crispy Chips</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="./Burgers/burgers.html">
+                <a href="./Burgers/burgers">
                     <img src="./Burgers/burger-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our A Grade Burgers</div>
                 </a>
             </div>
 
             <div class="animatedAds fade">
-                <a href="./Hake/hake.html">
+                <a href="./Hake/hake">
                     <img src="./Hake/hake-menu.jpg" class="imgAd"></img>
                     <div class="caption">Our Scrumptious Hake</div>
                 </a>
@@ -127,9 +127,9 @@
 
         <section class="policy-section">
             
-           <p><a href="./Ts_and_cs/Terms.html">Terms & Conditions</a></p>
-           <p><a href="./Ts_and_cs/privacyPolicy.html">Privacy Policy</a></p>
-           <p><a href="./Ts_and_cs/contact.html">Contact Us</a></p>  
+           <p><a href="./Ts_and_cs/Terms">Terms & Conditions</a></p>
+           <p><a href="./Ts_and_cs/privacyPolicy">Privacy Policy</a></p>
+           <p><a href="./Ts_and_cs/contact">Contact Us</a></p>  
         </section>
 
         <footer> 
