--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="index" id="home">Home</a></li>
                     <li id="menu-option"><a href="#show-menu">Menu</a></li>
                     <li><a href="#">Stores</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="./Ts_and_cs/contact">Contact</a></li>
                 </ul>
         </div>   
 
